fix: add scrollbar

--- a/src/app/modules/wybin-schedule/components/wybin-schedule/wybin-schedule.component.scss
+++ b/src/app/modules/wybin-schedule/components/wybin-schedule/wybin-schedule.component.scss
@@ -1,5 +1,12 @@
 @import "variables";
 
+.content {
+	max-height: 100%;
+	overflow: auto;
+
+	padding-right: 8px;
+}
+
 .tournaments {
 	display: flex;
 	flex-direction: column;
